--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
 	<!-- Open Graph tags -->
 	<meta property="og:title" content="Silsila Naqshbandia Owaisiah" />
 	<meta property="og:type" content="website" />
+	<meta property="og:description" content="The place to achieve self purification (Tazkiyah) through practising Zikr-e-Qalbi Khafi" />
+	<meta property="fb:app_id" content="3966197286973213" />
 	<meta property="og:url" content="https://www.naqshbandiaowaisiah.org/" />
-	<meta property="og:image" content="https://www.naqshbandiaowaisiah.org/assets/images/og/fb-cover-600x314.jpg" />
+	<meta property="og:image" content="https://www.naqshbandiaowaisiah.org/assets/images/Silsila_Nadshbandia_Owaisiah.jpg" />
 	<meta property="og:image:width" content="600" />
 	<meta property="og:image:height" content="314" />
-	<meta property="og:image" content="https://www.naqshbandiaowaisiah.org/assets/images/og/whatsapp-cover-500x500.png" />
-	<meta property="og:image:width" content="500" />
-	<meta property="og:image:height" content="500" />
 
 	<!-- BEGIN GLOBAL MANDATORY STYLES -->    
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
@@ -1479,6 +1478,8 @@
                         
                         <div class="fb-share-button" 
                             data-href="https://drive.google.com/file/d/1D40znTUEMeEDpfPEkZLqOPb4tPpkW9pv/view?usp=drive_link" data-layout="link" data-size="large">
+
+							<img src="/images/facebook.jpeg" class="img-responsive c-overlay-object" alt="Facebook" height="340" width="340">
                         </div>
 
 		  				<!--a target="_blank" href="https://www.facebook.com/oursheikh.official">
